# Log-Explorer

./: .gitignore  .journal_cursor  README.md  log.db-journal  meson.build  test.db
.flatpak-builder/cache/refs/heads/x86_64-org.logexplorer.LogExplorer.json/: build-log-explorer  cleanup  finish  init
.flatpak-builder/checksums/: x86_64-org.logexplorer.LogExplorer.json
.offsets/: syslog.3.gz.offset
flatpak/: README.md  org.logexplorer.LogExplorer.desktop  org.logexplorer.LogExplorer.json
repo-flatpak/: summary  summary.idx
repo-flatpak/refs/heads/app/org.logexplorer.LogExplorer/x86_64/: master
repo-flatpak/refs/heads/runtime/org.logexplorer.LogExplorer.Debug/x86_64/: master
repo-flatpak/summaries/: 932c5f70425248cffcfde84061937611fa1c17e5cf05819deee0b781d14eb313-795d7c45555e3ae16bc10f788d9515cad1a6ff22c9b343633550f709a9888e69.delta  a66b6597c0010dd312239e03a49dce2507b3a0c743324f789d68fb86303e8a98-17c4bc102c5022581a4c84ae59023dc888dfc3e1c4e7ec468c57ea775323f061.delta  b6fba2c36cb60da34e894f3a4ff43c84af5adac8f54793a3248f0f9f76587e9c-dd80357751c5692459d391ab0c0da57990105c660053f4dee78c24c1763953ea.delta  e50bab459aa0f219b8d1cfd682ed771db70961f9aadf119c1646a3223edc14c2-5c629f86791cc221386f45a7593c4640f770e817c80a339474df53dacea2f15a.delta
src/: cli_test.c  db.c  db.h  indexer.c  main.c  ui.c  ui.h
tools/: build_flatpak.sh  insert_sample.c
